# bluebubbles-app

./: .gitignore  FINDMY_UI_PREVIEW.md
.claude/: settings.local.json
bluebubbles-app-rust/: .gitignore  CHANGELOG.md  Cargo.toml
bluebubbles-app-rust/bb-api/: Cargo.toml
bluebubbles-app-rust/bb-api/src/: client.rs  lib.rs  response.rs
bluebubbles-app-rust/bb-api/src/endpoints/: attachments.rs  backups.rs  chats.rs  contacts.rs  facetime.rs  fcm.rs  handles.rs  icloud.rs  mac.rs  messages.rs  mod.rs  server.rs
bluebubbles-app-rust/bb-cli/: Cargo.toml
bluebubbles-app-rust/bb-cli/src/: main.rs
bluebubbles-app-rust/bb-cli/src/commands/: attachments.rs  backup.rs  chats.rs  connect.rs  contacts.rs  db.rs  diagnose.rs  facetime.rs  findmy.rs  logs.rs  messages.rs  mod.rs  private_api.rs  scheduled.rs  server.rs  settings.rs  status.rs  sync.rs
bluebubbles-app-rust/bb-core/: Cargo.toml
bluebubbles-app-rust/bb-core/src/: config.rs  constants.rs  error.rs  lib.rs  logging.rs  platform.rs
bluebubbles-app-rust/bb-models/: Cargo.toml
bluebubbles-app-rust/bb-models/src/: db.rs  lib.rs  migrations.rs  queries.rs  schema.rs
bluebubbles-app-rust/bb-models/src/models/: attachment.rs  attributed_body.rs  chat.rs  contact.rs  fcm_data.rs  findmy.rs  handle.rs  message.rs  mod.rs  payload_data.rs  scheduled_message.rs  settings.rs  theme.rs
bluebubbles-app-rust/bb-services/: Cargo.toml
bluebubbles-app-rust/bb-services/src/: action_handler.rs  attachment.rs  backup.rs  cache.rs  chat.rs  contact.rs  event_bus.rs  facetime.rs  fcm.rs  findmy.rs  handle.rs  lib.rs  lifecycle.rs  message.rs  notification.rs  queue.rs  registry.rs  scheduled.rs  search.rs  service.rs  settings.rs  sync.rs  theme.rs
bluebubbles-app-rust/bb-services/tests/: test_config.rs  test_crypto.rs  test_database.rs  test_event_flow.rs  test_services.rs
bluebubbles-app-rust/bb-services/tests/common/: mod.rs
bluebubbles-app-rust/bb-socket/: Cargo.toml
bluebubbles-app-rust/bb-socket/src/: crypto.rs  events.rs  lib.rs  manager.rs
bluebubbles-app-rust/bb-tauri/: FINDMY_COMMANDS_NEW.txt  INTEGRATION_GUIDE.md  OTP_DETECTION.md  OTP_IMPLEMENTATION_SUMMARY.md  OTP_TOAST_COMPONENT_TREE.md  OTP_TOAST_QUICKSTART.md  OTP_TOAST_SUMMARY.md  index.html  package-lock.json  package.json  vite.config.ts
bluebubbles-app-rust/bb-tauri/docs/: OTP_TOAST_IMPLEMENTATION.md
bluebubbles-app-rust/bb-tauri/src/: App.tsx  main.tsx
bluebubbles-app-rust/bb-tauri/src-tauri/: Cargo.toml  tauri.conf.json
bluebubbles-app-rust/bb-tauri/src-tauri/icons/: icon.icns
bluebubbles-app-rust/bb-tauri/src-tauri/src/: commands.rs  main.rs  mcp_auth.rs  mcp_server.rs  mcp_state.rs  mcp_tools.rs  menu.rs  otp_detector.rs  state.rs
bluebubbles-app-rust/bb-tauri/src/components/: Avatar.tsx  ContactDetailsSidebar.tsx  ContextMenu.tsx  ConversationTile.tsx  Dialog.tsx  DragDropZone.tsx  EmojiPicker.tsx  ImageLightbox.tsx  ImagePreviewCard.tsx  InputBar.tsx  LoadingLine.tsx  LoadingSpinner.tsx  LocationMapCard.tsx  LocationMapPopover.tsx  MessageBubble.tsx  OtpToast.tsx  ReactionBubble.tsx  ReactionDetailSheet.tsx  ReactionPicker.tsx  SearchBar.tsx  SendOptionsPopover.tsx  Toast.tsx
bluebubbles-app-rust/bb-tauri/src/contexts/: OtpToastContext.tsx
bluebubbles-app-rust/bb-tauri/src/hooks/: useConnection.ts  useOtpDetection.ts  useTauri.ts  useTheme.ts
bluebubbles-app-rust/bb-tauri/src/layouts/: AppLayout.tsx  Sidebar.tsx  TitleBar.tsx
bluebubbles-app-rust/bb-tauri/src/pages/: ChatDetails.tsx  ConversationList.tsx  ConversationView.tsx  FindMy.tsx  NewMessage.tsx  OtpDemo.tsx  Settings.tsx  SetupWizard.tsx  SyncScreen.tsx
bluebubbles-app-rust/bb-tauri/src/store/: attachmentStore.ts  chatStore.OPTIMIZED.ts  chatStore.ts  connectionStore.ts  contactStore.ts  findMyStore.ts  index.ts  messageStore.OPTIMIZED.ts  messageStore.ts  settingsStore.ts
bluebubbles-app-rust/bb-tauri/src/styles/: animations.css  globals.css  themes.css
bluebubbles-app-rust/bb-tauri/src/utils/: dateUtils.ts  demoData.ts  notificationSound.ts
bluebubbles-app-rust/tools/: COVERAGE_REPORT.md  FEATURE_MATRIX.md  check_coverage.bat  check_coverage.sh  coverage_data.json  coverage_tracker.py
docs/: 01-architecture-overview.md  02-services-and-business-logic.md  03-database-and-models.md  04-api-and-networking.md  05-ui-layouts-and-components.md  06-theming-and-design-language.md  07-utilities-and-helpers.md  08-platform-specific-code.md  INDEX.md
docs/ui-specs/: 00-ui-overview.md  01-design-tokens.md  02-conversation-list.md  03-conversation-view.md  04-settings-screens.md  05-setup-wizard.md  06-other-screens.md  07-shared-components.md  08-animations-and-effects.md
