[package]
name = "bb-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "BlueBubbles HTTP API client for the server REST API"

[dependencies]
# Workspace crates
bb-core = { path = "../bb-core" }

# HTTP client
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true

# Logging
tracing.workspace = true

# Time
chrono.workspace = true

# UUID
uuid.workspace = true
