[package]
name = "bb-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bluebubbles"
path = "src/main.rs"

[dependencies]
bb-core = { workspace = true }
bb-models = { workspace = true }
bb-api = { workspace = true }
bb-socket = { workspace = true }
bb-services = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
comfy-table = "7"
indicatif = "0.17"
dialoguer = "0.11"
console = "0.15"
