[package]
name = "bb-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
hostname = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
