[package]
name = "bb-models"
version.workspace = true
edition.workspace = true

[dependencies]
bb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
tokio = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
