[package]
name = "bb-socket"
version.workspace = true
edition.workspace = true

[dependencies]
bb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
md-5 = "0.10"
base64 = { workspace = true }
rand = { workspace = true }
