[package]
name = "bb-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "BlueBubbles desktop application built with Tauri"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"

# Workspace crates
bb-core = { path = "../../bb-core" }
bb-models = { path = "../../bb-models" }
bb-api = { path = "../../bb-api" }
bb-socket = { path = "../../bb-socket" }
bb-services = { path = "../../bb-services" }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Async runtime
tokio.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Time
chrono.workspace = true

# Config
dirs.workspace = true
base64.workspace = true

# Database
rusqlite.workspace = true

# Regex for OTP detection
regex.workspace = true
lazy_static.workspace = true

# UUID generation for temp GUIDs
uuid = { version = "1.10", features = ["v4"] }

# Crypto / random
rand.workspace = true

# MCP server (lightweight HTTP layer)
hyper = { version = "1", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio", "http1"] }
http-body-util = "0.1"
tokio-stream = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
